--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>66
     6</title>
-    <script type="text/javascript" language="javascript" src="http://storage.jd.com/1.0.9/zr.min.js"></script>
+    <script type="text/javascript" language="javascript" src="http://storage.360buyimg.com/v1.0.0/zr.min.js"></script>
     <script type="text/javascript">
         Zr.config({
             baseUrl:"/js/plugin_modules/",
