--- a/frontPage/datePicker.html
+++ b/frontPage/datePicker.html
@@ -233,13 +233,19 @@
                 });
                 picker.init({
                     target:"#date-4",
-                    type:"month"
+                    type:"month",
+                    onselect:function(time,array){
+                        console.log(array[0].format("YYYY-MM-DD"))
+                        console.log(array[array.length - 1].format("YYYY-MM-DD"))
+                    }
                 });
                 picker.init({
                     target:"#date-6",
                     type:"week",
-                    maxDate:"2018-09-20",
-                    minDate:"2018-01-09"
+                    onselect:function(time,array){
+                        console.log(array[0].format("YYYY-MM-DD"))
+                        console.log(array[array.length - 1].format("YYYY-MM-DD"))
+                    }
                 });
                 picker.init({
                     target:'#date-7',
