--- a/frontPage/input.html
+++ b/frontPage/input.html
@@ -242,7 +242,7 @@
 <!--注意此段js必须第一引入在开发模式下{-->
 <script type="text/javascript" src="js/input.js"></script>
 <script type="text/javascript" src="js/select.js"></script>
-<script type="text/javascript" src="/js/zr.min.js?3"></script>
+<script type="text/javascript" src="http://storage.jd.com/v1.0.0/zr.dev.min.js"></script>
 <script type="text/javascript">
 	Zr.config({
 		baseUrl: "/js/plugin_modules/"
