--- a/frontPage/buttons.html
+++ b/frontPage/buttons.html
@@ -25,7 +25,10 @@
 <article class="c-content">
     <section class="c-title">
         <p>Button 按钮</p>
-        <span>基础控件，当用户点击时触发一个操作</span>
+        <span>基础控件，没有自定义方法。直接添加样式和自定义属性即可使用。
+            <a href="//github.com/guguaihaha/zr-source/blob/master/docs/inner/button.md"><b>API文档</b></a>
+            <a href="//github.com/guguaihaha/zr-source/issues/2"><b>讨论</b></a>
+        </span>
     </section>
     <div class="c-line"></div>
     <section class="c-thin-title">
