--- a/frontPage/radio.html
+++ b/frontPage/radio.html
@@ -144,10 +144,10 @@
     })
     Zr.ready(function(){
         Zr.use("./js/quickMenu","./js/code",function(zr){
-            document.getElementById("radio-demo1").zrChange({
+            document.getElementById("radio-demo1").onzrchange({
                 checked:true
             })
-            document.getElementById("radio-demo2").zrChange({
+            document.getElementById("radio-demo2").onzrchange({
                 disabled:true
             })
         })
