--- a/frontPage/checkbox.html
+++ b/frontPage/checkbox.html
@@ -38,12 +38,12 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <input type="checkbox" name="" value="0" title="checkbox1" class="zr-checkbox">
-            <input type="checkbox" name="" value="0" title="checkbox2" class="zr-checkbox" checked="true">
+            <input type="checkbox" name="" value="checkbox1" title="checkbox1" class="zr-checkbox">
+            <input type="checkbox" name="" value="checkbox2" title="checkbox2" class="zr-checkbox" checked="true">
         </div>
         <div class="c-code-inner c-code-hide">
-            <input type="checkbox" name="" value="0" title="checkbox1" class="zr-checkbox">
-            <input type="checkbox" name="" value="0" title="checkbox2" class="zr-checkbox" checked="true">
+            <input type="checkbox" name="" value="checkbox1" title="checkbox1" class="zr-checkbox">
+            <input type="checkbox" name="" value="checkbox2" title="checkbox2" class="zr-checkbox" checked="true">
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -56,8 +56,8 @@
         <!--switch code show or hide-->
         <div class="c-code-switch">&lt;code&gt;</div>
         <div class="c-demo">
-            <input type="checkbox" name="" value="0" title="checkbox1" class="zr-checkbox" disabled="disabled">
-            <input type="checkbox" name="" value="0" title="checkbox2" class="zr-checkbox" checked="true" disabled="disabled">
+            <input type="checkbox" name="" value="" title="checkbox1" class="zr-checkbox" disabled="disabled">
+            <input type="checkbox" name="" value="" title="checkbox2" class="zr-checkbox" checked="true" disabled="disabled">
         </div>
         <div class="c-code-inner c-code-hide">
             <input type="checkbox" name="" value="0" title="checkbox1" class="zr-checkbox" disabled="disabled">
