update input module

--- a/frontPage/input.html
+++ b/frontPage/input.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>组件平台显示内容</title>
     <link type="text/css" rel="stylesheet" href="/frontPage/css/content.min.css?4"/>
+    <link type="text/css" rel="stylesheet" href="/js/plugin_modules/zr/css/zr.min.css"/>
     <script type="text/javascript" src="//cdn.bootcss.com/jquery/1.10.1/jquery.min.js"></script>
 
     <style>
