--- a/frontPage/input.html
+++ b/frontPage/input.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="//cdn.bootcss.com/jquery/1.10.1/jquery.min.js"></script>
 
     <style>
-        .c-demo>div{
+        .c-demo > div {
             margin-bottom: 8px;
         }
     </style>
@@ -32,7 +32,8 @@
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>基础样式 <a href="#">#</a></p>
-        <span>最基础输入框的使用状态有默认状态和禁用状态，只需要添加样式  <i class="c-block-inline">zr-input</i> ；input标签有  <i class="c-block-inline">disabled</i> 属性时会显示成禁用状态。</span>
+        <span>最基础输入框的使用状态有默认状态和禁用状态，只需要添加样式  <i class="c-block-inline">zr-input</i> ；input标签有  <i
+                class="c-block-inline">disabled</i> 属性时会显示成禁用状态。</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
@@ -46,17 +47,18 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--默认状态-->
-    <input type="text" placeholder="Please input text" class="zr-input">
-    <!--禁用状态，只需给input标签设置disabled属性-->
-    <input type="text" placeholder="Text" disabled="disabled" class="zr-input">
+            <!--默认状态-->
+            <input type="text" placeholder="Please input text" class="zr-input">
+            <!--禁用状态，只需给input标签设置disabled属性-->
+            <input type="text" placeholder="Text" disabled="disabled" class="zr-input">
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>输入框尺寸 <a href="#">#</a></p>
-        <span>定义了输入框三种尺寸：大、中（默认）、小；高度分别为  <i class="c-block-inline">40px</i>   <i class="c-block-inline">32px</i>   <i class="c-block-inline">24px</i>；
+        <span>定义了输入框三种尺寸：大、中（默认）、小；高度分别为  <i class="c-block-inline">40px</i>   <i class="c-block-inline">32px</i>   <i
+                class="c-block-inline">24px</i>；
         大尺寸和小尺寸需额外增加样式 <i class="c-block-inline">zr-input-lg</i> 和 <i class="c-block-inline">zr-input-sm</i>。</span>
     </section>
     <section class="c-code">
@@ -74,12 +76,12 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--大尺寸 需额外增加样式“zr-input-lg”-->
-    <input type="text" placeholder="Large" class="zr-input zr-input-lg">
-    <!--默认尺寸-->
-    <input type="text" placeholder="Default" class="zr-input">
-    <!--小尺寸 需额外增加样式“zr-input-sm”-->
-    <input type="text" placeholder="Small" class="zr-input zr-input-sm">
+            <!--大尺寸 需额外增加样式“zr-input-lg”-->
+            <input type="text" placeholder="Large" class="zr-input zr-input-lg">
+            <!--默认尺寸-->
+            <input type="text" placeholder="Default" class="zr-input">
+            <!--小尺寸 需额外增加样式“zr-input-sm”-->
+            <input type="text" placeholder="Small" class="zr-input zr-input-sm">
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -98,8 +100,8 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--只需增加样式“zr-input-clear”-->
-    <input type="text" placeholder="Please input text" class="zr-input zr-input-clear">
+            <!--只需增加样式“zr-input-clear”-->
+            <input type="text" placeholder="Please input text" class="zr-input zr-input-clear">
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -107,7 +109,7 @@
     <div class="c-block-50"></div>
     <section class="c-sub-title">
         <p>带icon的输入框 <a href="#">#</a></p>
-        <span>带有icon的输入框，分为两种：可操作的icon置于输入框的右侧（默认状态）；提醒性的icon置于输入框左侧，父级div需增加样式 <i class="c-block-inline">zr-input-left</i>。</span>
+        <span>带有icon的输入框，分为两种：可操作的icon置于输入框的右侧（默认状态）；</span>
     </section>
     <section class="c-code">
         <!--switch code show or hide-->
@@ -122,7 +124,7 @@
                 </div>
             </div>
             <div style="width: 240px">
-                <div class="zr-input-group zr-input-left">
+                <div class="zr-input-group">
                     <span class="zr-input-addon">
                         <i class="zricon-user-empty"></i>
                     </span>
@@ -131,20 +133,19 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--默认状态-->
-    <div class="zr-input-group">
-        <input type="text" placeholder="Please input text" class="zr-input">
-        <span class="zr-input-addon">
+            <!--默认状态-->
+            <div class="zr-input-group">
+                <input type="text" placeholder="Please input text" class="zr-input">
+                <span class="zr-input-addon">
             <i class="zricon-calendar-empty"></i>
         </span>
-    </div>
-    <!--增加样式“zr-input-left”，icon置于左侧-->
-    <div class="zr-input-group zr-input-left">
+            </div>
+            <div class="zr-input-group">
         <span class="zr-input-addon">
             <i class="zricon-user-empty"></i>
         </span>
-        <input type="text" placeholder="Please input text" class="zr-input">
-    </div>
+                <input type="text" placeholder="Please input text" class="zr-input">
+            </div>
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -163,8 +164,8 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <!--maxlength属性用于显示最大可输入字符数-->
-    <textarea class="zr-textarea" maxlength="100" placeholder="Textarea"></textarea>
+            <!--maxlength属性用于显示最大可输入字符数-->
+            <textarea class="zr-textarea" maxlength="100" placeholder="Textarea"></textarea>
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -210,32 +211,32 @@
             </div>
         </div>
         <div class="c-code-inner c-code-hide">
-    <div class="zr-input-wapper">
-        <select name="country" class="zr-select">
-            <option value="option1">option1</option>
-            <option value="option2">option2</option>
-        </select>
-        <input type="text" class="zr-input">
-    </div>
-    <div class="zr-input-wapper zr-input-btn">
-        <div class="zr-input-wapper zr-input-btn">
-            <select name="country" class="zr-select">
-                <option value="option1">option1</option>
-                <option value="option2">option2</option>
-            </select>
-            <input type="text" class="zr-input">
-            <span class="zr-input-addon">
+            <div class="zr-input-wapper">
+                <select name="country" class="zr-select">
+                    <option value="option1">option1</option>
+                    <option value="option2">option2</option>
+                </select>
+                <input type="text" class="zr-input">
+            </div>
+            <div class="zr-input-wapper zr-input-btn">
+                <div class="zr-input-wapper zr-input-btn">
+                    <select name="country" class="zr-select">
+                        <option value="option1">option1</option>
+                        <option value="option2">option2</option>
+                    </select>
+                    <input type="text" class="zr-input">
+                    <span class="zr-input-addon">
                 <i class="zricon-search-empty"></i>
             </span>
-        </div>
-    </div>
-    <div class="zr-input-wapper zr-input-wapper-left zr-input-btn">
-        <input type="text" class="zr-input">
-        <select name="country" class="zr-select">
-            <option value="option1">option1</option>
-            <option value="option2">option2</option>
-        </select>
-    </div>
+                </div>
+            </div>
+            <div class="zr-input-wapper zr-input-wapper-left zr-input-btn">
+                <input type="text" class="zr-input">
+                <select name="country" class="zr-select">
+                    <option value="option1">option1</option>
+                    <option value="option2">option2</option>
+                </select>
+            </div>
         </div>
         <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
     </section>
@@ -245,14 +246,14 @@
 <script type="text/javascript" src="js/select.js"></script>
 <script type="text/javascript" src="http://storage.jd.com/v1.0.0/zr.dev.min.js"></script>
 <script type="text/javascript">
-	Zr.config({
-		baseUrl: "/js/plugin_modules/"
-	})
-	Zr.ready(function () {
-		Zr.use("./js/quickMenu", "./js/code",function (zr) {
-			zr.dom.dispatch();
-		})
-	})
+    Zr.config({
+        baseUrl: "/js/plugin_modules/"
+    })
+    Zr.ready(function () {
+        Zr.use("./js/quickMenu", "./js/code", function (zr) {
+            zr.dom.dispatch();
+        })
+    })
 </script>
 </body>
 </html>
