--- a/frontPage/input.html
+++ b/frontPage/input.html
@@ -247,6 +247,11 @@
 <script type="text/javascript" src="http://storage.jd.com/v1.0.0/zr.dev.min.js"></script>
 <script type="text/javascript">
     Zr.config({
+        modole: {
+            zr: {
+                path: './zr/dev_index'
+            }
+        },
         baseUrl: "/js/plugin_modules/"
     })
     Zr.ready(function () {
