--- a/frontPage/radio.html
+++ b/frontPage/radio.html
@@ -46,7 +46,7 @@
         <div class="c-block-50"></div>
         <section class="c-sub-title">
             <p>禁选样式 <a href="#">#</a></p>
-            <span>单选框不可用状态：不可选、不可更改,标签上加上 <i class="c-block-inline">disabled="disabled"</i> 即为不可用状态</span>
+            <span>单选框不可用状态：不可选、不可更改,标签上加上 <i class="c-block-inline">disabled=""</i> 即为不可用状态</span>
         </section>
         <section class="c-code">
             <!--switch code show or hide-->
@@ -86,7 +86,7 @@
         </section>
         <section class="c-sub-title">
             <p>禁用样式<a href="#">#</a></p>
-            <span>单选框不可用状态：不可选、不可更改,标签上加上 <i class="c-block-inline">disabled="disabled"</i> 即为不可用状态</span>
+            <span>单选框不可用状态：不可选、不可更改,标签上加上 <i class="c-block-inline">disabled=""</i> 即为不可用状态</span>
         </section>
         <section class="c-code">
             <!--switch code show or hide-->
@@ -116,36 +116,198 @@
             <!--switch code show or hide-->
             <div class="c-code-switch">&lt;code&gt;</div>
             <div class="c-demo">
-                <input type="radio" data-label="label1" name="zr1" class="zr-radio" value="2" id="radio-demo1">
-                <input type="radio" data-label="label2" name="zr1" class="zr-radio" value="3" id="radio-demo2">
+                <input type="radio" data-label="label1" name="zr1" class="zr-radio" value="2" id="js-demo">
+                <input type="radio" data-label="label2" name="zr1" class="zr-radio" value="3" id="js-demo1">
+                <button class="zr-btn zr-btn-primary js-select">选中</button>
+                <button class="zr-btn zr-btn-default js-disable">禁用</button>
             </div>
             <div class="c-code-inner c-code-hide">
                 <!--html代码-->
-                <input type="radio" data-label="label1" name="zr2" value="111" class="zr-radio" id="radio-demo3">
+                <input type="radio" data-label="label1" name="demo9" class="zr-radio" value="2" id="js-demo2">
+                <input type="radio" data-label="label2" name="demo9" class="zr-radio" value="3" id="js-demo3">
+                <button class="zr-btn zr-btn-primary js-select">选中</button>
+                <button class="zr-btn zr-btn-default js-disable">禁用</button>
                 <!--javascript代码-->
-                <!--checked属性默认为false不选中，当他为true时会选中-->
-                document.getElementById("radio-demo3").onzrchange({
-                    checked: true,
-                    disabled: true,
-                    value: 'xx1',
-                    label: 14,
-                    beforeFn: function (opt) {
-                        // console.log(this);
-                    console.log(this);
-                    },
-                    afterFn: function (opt) {
-                        // console.log(this);
-                    }
+                $('.js-select').on('click', function () {
+                    document.getElementById("js-demo2").onzrchange({
+                        checked: true
+                    })
                 })
-                <!--html代码-->
-                <input type="radio" data-label="label2" name="zr2" value="111" class="zr-radio" id="radio-demo4">
-                <!--javascript代码-->
-                <!--disabled属性默认为false不选中，当他为true时会选中-->
-                document.getElementById("radio-demo4").onzrchange({
-                    disabled:true
+                $('.js-disable').on('click', function () {
+                    document.getElementById("js-demo3").onzrchange({
+                        checked: true,
+                        disabled: true
+                    })
                 })
             </div>
             <a href="javascript:void(0);" class="c-toggle"><span>显示代码</span><i class="zricon-arrow-down"></i></a>
+        </section>
+
+        <div class="c-block-50"></div>
+        <section class="c-sub-title">
+            <p>API <a href="#">#</a></p>
+            <span>
+                自定义属性
+            </span>
+        </section>
+        <div class="c-block-20"></div>
+        <section class="c-table">
+            <div class="c-table-header">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>
+                                <div class="c-cell c-table-w-200">属性</div>
+                            </th>
+                            <th>
+                                <div class="c-cell c-table-w-125">类型（是否必要）</div>
+                            </th>
+                            <th>
+                                <div class="c-cell c-table-w-500">描述</div>
+                            </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <div class="c-table-body">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">checked</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">string (选填)</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">checked 选中 eg: checked=""</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">disabled</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">string (选填)</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">disabled 禁用 eg: disabled=""</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">data-label</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">string (选填)</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">leabel内文字,可为空 eg: data-label="中国"</div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <div class="c-block-50"></div>
+        <section class="c-sub-title">
+            <p>onzrchange配置项 <a href="#">#</a></p>
+            <span>
+                onzrchange可传配置项说明
+            </span>
+        </section>
+        <div class="c-block-20"></div>
+        <section class="c-table">
+            <div class="c-table-header">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>
+                                <div class="c-cell c-table-w-200">属性</div>
+                            </th>
+                            <th>
+                                <div class="c-cell c-table-w-125">类型</div>
+                            </th>
+                            <th>
+                                <div class="c-cell c-table-w-500">描述</div>
+                            </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <div class="c-table-body">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">checked</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">Boolean</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">"选中" eg: {checked: true}</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">disabled</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">Boolean</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">"禁用" eg: {disabled: true}</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">value</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">String/Number</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">"值" eg: {value: 0}</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">label</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">String/Number</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">"显示文字" eg: {label: 0}</div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">beforeFn</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">Function</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">回调函数,初始化开始时执行.this指向为当前操作input </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="c-cell c-table-w-200">afterFn</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-125">Function</div>
+                            </td>
+                            <td>
+                                <div class="c-cell c-table-w-500">回调函数,初始化结束时执行.this指向为当前操作input </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
     </article>
     <!--注意此段js必须第一引入在开发模式下{-->
@@ -158,21 +320,16 @@
         })
         Zr.ready(function () {
             Zr.use("./js/quickMenu", "./js/code", function (zr) {
-                document.getElementById("radio-demo1").onzrchange({
-                    checked: true,
-                    disabled: true,
-                    value: '55',
-                    label: 'zr-radio-demo',
-                    beforeFn: function (opt) {
-                        // console.log(this);
-                    console.log(this);
-                    },
-                    afterFn: function (opt) {
-                        // console.log(this);
-                    }
+                $('.js-select').on('click', function () {
+                    document.getElementById("js-demo").onzrchange({
+                        checked: true
+                    })
                 })
-                document.getElementById("radio-demo2").onzrchange({
-                    disabled: true
+                $('.js-disable').on('click', function () {
+                    document.getElementById("js-demo1").onzrchange({
+                        checked: true,
+                        disabled: true
+                    })
                 })
             })
         })
